# Tiny-CNN-

./: MANIFEST.md  README.md  sdkconfig  sdkconfig.defaults
docs/: ai_model_reference_cn.md  coco_image_validation.md  developer_guide.md  marine_vision_datasets_cn.md  tiny_cnn_classifier_cn.md  tinycls_project_explanation_cn.md
firmware/: flash_args  flasher_args.json
main/: CMakeLists.txt  Kconfig.projbuild  camera_web_main.c  idf_component.yml  legacy_recognition_stubs.cpp  stub_embedded_assets.c  tiny_cls_espdl_bridge.cpp
models/: README.md  tiny_cls_96.onnx  tiny_cls_96.onnx.data  tiny_cls_96.pt  tiny_cls_96_6cls.onnx  tiny_cls_96_6cls.onnx.data  tiny_cls_96_6cls.pt  tiny_cls_96_6cls_s8_p4.espdl  tiny_cls_96_6cls_s8_p4.info  tiny_cls_96_6cls_s8_p4.json  tiny_cls_96_s8_p4.espdl  tiny_cls_96_s8_p4.info  tiny_cls_96_s8_p4.json  tiny_cls_l_160_6cls.onnx  tiny_cls_l_160_6cls.onnx.data  tiny_cls_l_160_6cls.pt  tiny_cls_l_160_6cls_s8_p4.espdl  tiny_cls_l_160_6cls_s8_p4.info  tiny_cls_l_160_6cls_s8_p4.json  tiny_cls_m_128_6cls.onnx  tiny_cls_m_128_6cls.onnx.data  tiny_cls_m_128_6cls.pt
scripts/: flash_release_p4.ps1
tools/: make_tinycls_release.py  merge_tiny_cls_datasets.py  prepare_lars_yolo_dataset.py  prepare_potato_tiny_cls_dataset.py  prepare_tiny_cls_dataset.py  quantize_tiny_cls_espdl.py
